# SharedMemory

./: .gitignore  CMakeLists.txt  README.md
src/client/: CMakeLists.txt  main.cpp
src/common/: sharedmem.cpp  sharedmem.h
src/server/: CMakeLists.txt  main.cpp
